# hbrick

./: .cursorrules  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  codex_implementation_spec.md
.github/workflows/: ci.yml
campaigns/: kleene_micro_output.txt
campaigns/movingai/: manifest.csv  metadata.json  results.csv  summary.md  workload.json
campaigns/movingai/gallery/: movingai_bgmaps_AR0408SR.map.ppm  movingai_da2_ht_store.map.ppm  movingai_dao_ost102d.map.ppm
campaigns/movingai/recipes/: bgmaps__AR0408SR.map__random_asymmetric__8f1ba89e5adbe53d__d3d89d4a.json  da2__ht_store.map__random_asymmetric__6d675d49abb9b4b6__d3eed63f.json  dao__ost102d.map__random_asymmetric__3432ba5cd523bc26__ddda2f7e.json
campaigns/run01/: manifest.csv  metadata.json  results.csv  summary.md  workload.json
campaigns/run01/gallery/: proc_w5h5_c1_o1_open2_random_asymmetric_i1.ppm
campaigns/run01/recipes/: run01__proc_w5h5_c1_o1_open2_random_asymmetric_i0__random_asymmetric__0000000000ca0151__2d9a650d.json  run01__proc_w5h5_c1_o1_open2_random_asymmetric_i1__random_asymmetric__0000000000ca0151__547a4622.json
campaigns/run02/: manifest.csv  metadata.json  results.csv  summary.md  workload.json
campaigns/run02/gallery/: proc_w31h31_c42_o0_open43_random_asymmetric_i0.ppm
campaigns/run02/recipes/: run02__proc_w31h31_c42_o0_open43_random_asymmetric_i0__random_asymmetric__0000000000ca0151__5e148ec5.json  run02__proc_w31h31_c42_o0_open43_random_asymmetric_i1__random_asymmetric__0000000000ca0151__24810fba.json  run02__proc_w31h31_c42_o0_open43_random_asymmetric_i2__random_asymmetric__0000000000ca0151__702ccce3.json  (+1 more)
campaigns/smoke/: manifest.csv  metadata.json  results.csv  summary.md  workload.json
datasets/movingai/: README.md  SHA256SUMS  fetch_movingai.sh
docs/: CMakeLists.txt  Doxyfile.in  atlas.md  bap_1001_proposal.md  benchmark_campaign.md  benchmark_campaign_decisions.md  benchmark_campaign_kleene.md  benchmark_campaign_seeding.md  benchmark_campaign_todo.md  brick_implementation.md  closure_storage.md  dataset_browser.md  graph_search_scratch.md  groups.dox  mainpage.md  reachability_density.md  reachability_density_algorithm.md  representations.md  traversal_storage.md
src/: CMakeLists.txt
src/baselines/: CMakeLists.txt  baseline_graph_utils.cpp  brick_closure_baseline.cpp  brick_search_baseline.cpp  closure_matrix_builder.cpp  csr_bfs_baseline.cpp  csr_dfs_baseline.cpp  full_closure_baseline.cpp  grail_baseline.cpp  hbrick_baseline.cpp  hbrick_query_scratch.cpp  scc_dag_closure_baseline.cpp  scc_dag_search_baseline.cpp  two_hop_baseline.cpp
src/bench/: CMakeLists.txt  bench_sample.cpp  bench_timer.cpp  benchmark_campaign.cpp  benchmark_campaign_analysis.cpp  benchmark_campaign_config.cpp  benchmark_campaign_dataset.cpp  benchmark_campaign_gallery.cpp  benchmark_campaign_log.cpp  benchmark_campaign_main.cpp  benchmark_campaign_run.cpp  kleene_closure_benchmark.cpp  port_closure_benchmark.cpp  process_memory.cpp  reachability_benchmark.cpp  reachability_benchmark_format.cpp  reachability_benchmark_runner.cpp  reachability_benchmark_util.cpp
src/bit/: CMakeLists.txt  bit_matrix.cpp  bit_vector.cpp  boolean_closure.cpp  kleene_squaring_options.cpp
src/core/: CMakeLists.txt  status_reporting.cpp  version.cpp
src/graph/: CMakeLists.txt  bfs.cpp  condensation_graph.cpp  connected_components.cpp  csr_graph.cpp  csr_graph_builder.cpp  dag_reachability.cpp  dfs.cpp  directed_grid_graph.cpp  directed_grid_graph_builder.cpp  graph_search_scratch.cpp  kleene_squaring_bounds.cpp  random_asymmetric_params.cpp  reachability_density.cpp  scc_compressed_closure.cpp  scc_decomposition.cpp
src/grid/: CMakeLists.txt  maze_layout.cpp
src/io/: CMakeLists.txt  movingai_loader.cpp  movingai_map.cpp
src/tile/: CMakeLists.txt  base_tile_summary.cpp  brick_index.cpp  brick_index_builder.cpp  brick_tile_index.cpp  external_boundary_ports.cpp  group_tile_slots.cpp  hbrick_build_format.cpp  hbrick_index.cpp  hbrick_index_builder.cpp  hierarchy_tree.cpp  port_graph.cpp  port_index.cpp  super_tile_composer.cpp  super_tile_oracle.cpp  tile_boundary_order.cpp  tile_closure_util.cpp  tile_decomposition.cpp
src/viz/: CMakeLists.txt  grid_graph_renderer.cpp  svg_canvas.cpp
tests/: CMakeLists.txt
tests/integration/: test_brick_reachability.cpp  test_correctness_harness.cpp  test_hbrick_reachability.cpp  test_maze_reachability.cpp  test_movingai_reachability.cpp  test_recipe_reachability.cpp  test_scc_reachability.cpp
tests/support/: maze_generator.cpp  maze_generator.hpp  movingai_map_catalog.cpp  movingai_map_catalog.hpp  reachability_oracle.cpp  reachability_oracle.hpp  recipe_graph.cpp  recipe_graph.hpp  test_limits.hpp
tests/unit/: test_base_tile_summary.cpp  test_bench.cpp  test_benchmark_campaign.cpp  test_bfs_dfs.cpp  test_bit_matrix.cpp  test_bit_vector.cpp  test_boolean_closure.cpp  test_brick_closure_baseline.cpp  test_brick_index.cpp  test_brick_search_baseline.cpp  test_closure_matrix_builder.cpp  test_connected_components.cpp  test_core_types.cpp  test_csr_baselines.cpp  test_csr_graph.cpp  test_dag_reachability.cpp  test_directed_grid_graph.cpp  test_hbrick_baseline.cpp  test_hbrick_index_builder.cpp  test_hierarchy_build.cpp  test_hierarchy_scaffold.cpp  test_hot_path_allocations.cpp  test_kleene_squaring_bounds.cpp  test_maze_generator.cpp  test_maze_layout.cpp  test_movingai_loader.cpp  test_passable_grid.cpp  test_placeholder.cpp  test_port_graph.cpp  test_preprocess_memory_ledger.cpp  test_reachability_benchmark.cpp  test_reachability_benchmark_format.cpp  test_reachability_benchmark_runner.cpp  test_reachability_density.cpp  test_scc_compressed_closure.cpp  test_scc_dag.cpp  test_super_tile_compose.cpp  test_super_tile_verify.cpp  test_svg_canvas.cpp  test_tile_decomposition.cpp  (+1 more)
tools/: CMakeLists.txt
tools/dataset_browser/: CMakeLists.txt  brick_panel.cpp  brick_panel.hpp  browser_app.cpp  browser_app.hpp  dataset_index.cpp  dataset_index.hpp  main.cpp  map_render.cpp  map_render.hpp  orientation.cpp  orientation.hpp  recipe.cpp  recipe.hpp
(+91 files in other folders)
